# risk-analyst

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/00_mathematical_foundations/: foundations.tex  roadmap.tex  template.tex
docs/05_evt_tail_risk/: theory.tex
docs/06_copula_dependency/: theory.tex
docs/07_stress_testing_framework/: theory.tex
docs/08_deep_hedging/: theory.tex
docs/09_cva_counterparty_risk/: theory.tex
docs/10_gnn_credit_contagion/: theory.tex
docs/11_conformal_risk_prediction/: theory.tex
docs/12_climate_risk_scenarios/: theory.tex
docs/13_rl_portfolio_risk/: theory.tex
docs/showcase/: generate_p05_p06_plots.py  generate_p07_plots.py  generate_p08_plots.py  generate_p09_plots.py  generate_p10_plots.py  generate_p11_plots.py  generate_p12_plots.py  generate_p13_plots.py  generate_plots.py  showcase.tex
projects/01_portfolio_risk_dashboard/: README.md
projects/01_portfolio_risk_dashboard/configs/: default.yaml
projects/01_portfolio_risk_dashboard/notebooks/: walkthrough.ipynb
projects/01_portfolio_risk_dashboard/src/: __init__.py  dashboard.py  model.py
projects/01_portfolio_risk_dashboard/tests/: test_model.py
projects/02_monte_carlo_engine/: README.md
projects/02_monte_carlo_engine/configs/: default.yaml
projects/02_monte_carlo_engine/notebooks/: walkthrough.ipynb
projects/02_monte_carlo_engine/src/: __init__.py  model.py
projects/02_monte_carlo_engine/tests/: test_model.py
projects/03_credit_scoring_ml/: README.md
projects/03_credit_scoring_ml/configs/: default.yaml
projects/03_credit_scoring_ml/notebooks/: walkthrough.ipynb
projects/03_credit_scoring_ml/src/: __init__.py  data.py  evaluate.py  model.py
projects/03_credit_scoring_ml/tests/: __init__.py  test_model.py
projects/04_volatility_modeling/: README.md
projects/04_volatility_modeling/configs/: default.yaml
projects/04_volatility_modeling/notebooks/: walkthrough.ipynb
projects/04_volatility_modeling/src/: __init__.py  diagnostics.py  model.py
projects/04_volatility_modeling/tests/: __init__.py  test_model.py
projects/05_evt_tail_risk/: README.md
projects/05_evt_tail_risk/configs/: default.yaml
projects/05_evt_tail_risk/notebooks/: walkthrough.ipynb
projects/05_evt_tail_risk/src/: __init__.py  diagnostics.py  model.py  threshold.py
projects/05_evt_tail_risk/tests/: test_model.py
projects/06_copula_dependency/: README.md
projects/06_copula_dependency/configs/: default.yaml
projects/06_copula_dependency/notebooks/: walkthrough.ipynb
projects/06_copula_dependency/src/: __init__.py  diagnostics.py  marginal.py  model.py
projects/06_copula_dependency/tests/: test_model.py
projects/07_stress_testing_framework/: README.md
projects/07_stress_testing_framework/configs/: default.yaml
projects/07_stress_testing_framework/notebooks/: walkthrough.ipynb
projects/07_stress_testing_framework/src/: diagnostics.py  model.py  reverse_stress.py  scenarios.py  transmission.py
projects/07_stress_testing_framework/tests/: test_model.py
projects/08_deep_hedging/: README.md
projects/08_deep_hedging/configs/: default.yaml
projects/08_deep_hedging/notebooks/: walkthrough.ipynb
projects/08_deep_hedging/src/: diagnostics.py  environment.py  (+3 more)
projects/09_cva_counterparty_risk/: README.md
projects/10_gnn_credit_contagion/: README.md
projects/11_conformal_risk_prediction/: README.md
projects/12_climate_risk_scenarios/: README.md
projects/13_rl_portfolio_risk/: README.md
src/risk_analyst/: __init__.py
tests/: test_measures.py
(+75 files in other folders)
